Added instructions link to homepage.

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  <a href="http://github.com/lawrnce/hotscoreserver" target="_blank">Instructions</a>
+  p Lawrence Tran
